# llama3-assistant

./: .gitignore  README.md  deploy.yaml
configs/: ui.yaml
docker/: docker-compose.yml  ollama3.Dockerfile  ui.Dockerfile
src/: app.py
src/ui/: pyproject.toml
src/ui/configs/: config.py
